switch to htmx, fix tests, etc

--- a/static/index.html
+++ b/static/index.html
@@ -2,27 +2,28 @@
 <html class="no-js" lang="">
 
 <head>
-  <meta charset="utf-8">
-  <title>ShakeSearch</title>
-  <link rel="stylesheet" href="style.css">
-  <meta name="theme-color" content="#fafafa">
+    <meta charset="utf-8">
+    <title>ShakeSearch</title>
+    <link rel="stylesheet" href="style.css">
+    <meta name="theme-color" content="#fafafa">
+    
+    <!-- Import htmx library -->
+    <script src="https://unpkg.com/htmx.org"></script>
 </head>
 
 <body>
-  <p>
-  <form id="form">
-    <label for="query">Query</label>
-    <input type="text" id="query" name="query">
-    <button type="submit">Search</button>
-  </form>
-  </p>
-  <p>
-  <table id="table">
-    <tbody id="table-body"></tbody>
-  </table>
-  </p>
-  <button>Load More</button>
-  <script src="app.js"></script>
+    <p>
+        <form id="form" hx-get="/search" hx-target="#table-body">
+            <label for="query">Query</label>
+            <input type="text" id="query" name="q">
+            <button type="submit">Search</button>
+        </form>
+    </p>
+    <p>
+        <table>
+            <tbody id="table-body"></tbody>
+        </table>
+    </p>
 </body>
 
 </html>
